--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-files": "^3.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "yup": "^1.2.0"
